objects/Setup_Wizard_Steps__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Diagram_Last_Action__c</fullName>
        <label>Diagram Last Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Git_Repository_Id__c</fullName>
        <label>Git Repository Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Git_Snapshot_Id__c</fullName>
        <label>Git Snapshot Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Step__c</fullName>
        <label>Last Step</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Credential_Id__c</fullName>
        <label>Org Credential Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_Id__c</fullName>
        <label>Pipeline Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wizard_Last_Action__c</fullName>
        <label>Wizard Last Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Setup Wizard Steps</label>
</CustomObject>